--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MuseumTickets">
+        <activity android:name=".MuseumView4"></activity>
+        <activity android:name=".MuseumView3" />
+        <activity android:name=".MuseumView2" />
+        <activity android:name=".MuseumView1" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
